# Lyric

./: .gitignore  LICENSE.md  LrcCopy.py  MANIFEST.in  README.md  README_EN.md  clean_update.py  example.py  pyproject.toml  setup.py  upload.bat
Lyric/: LICENSE.md  __init__.py  constants.py  main.py  subclass.py
LyricLib/: LICENSE(lrc-parser).md  __init__.py  constants.py  exceptions.py  main.py  subclass.py  types.py  utils.py
LyricLib/lrc/: __init__.py  constants.py  exceptions.py  utils.py
docs/: Lrc文件格式.md  开发日志.TXT
examples/: LrcMaker.py
